cmake_minimum_required(VERSION 3.17)
project(CPlusPlusBasic)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPlusPlusBasic demo/chapter9/main.cpp main.cpp macro/macro_study.cpp demo/chapter2/demo.cpp demo/chapter5/demo.cpp demo/chapter10/Stock.cpp demo/chapter10/Stock.h demo/chapter10/main.cpp demo/chapter10/Brave.cpp demo/chapter10/Brave.h demo/chapter10/Stack.cpp demo/chapter10/Stack.h demo/chapter11/main.cpp demo/chapter11/Time.cpp demo/chapter11/Time.h demo/chapter12/StringBad.cpp demo/chapter12/StringBad.h demo/chapter12/main.cpp)
