cmake_minimum_required(VERSION 3.17)
project(CPlusPlusBasic)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPlusPlusBasic demo/chapter9/main.cpp main.cpp macro/macro_study.cpp demo/chapter2/demo.cpp demo/chapter5/demo.cpp demo/chapter10/Stock.cpp demo/chapter10/Stock.h demo/chapter10/main.cpp demo/chapter10/Brave.cpp demo/chapter10/Brave.h demo/chapter10/Stack.cpp demo/chapter10/Stack.h demo/chapter11/main.cpp demo/chapter11/Time.cpp demo/chapter11/Time.h demo/chapter11/Student.cpp demo/chapter11/Student.h demo/chapter12/StringBad.cpp demo/chapter12/StringBad.h demo/chapter12/main.cpp demo/chapter12/String.cpp demo/chapter12/String.h demo/chapter12/Empty.cpp demo/chapter12/Empty.h demo/chapter13/main.cpp demo/chapter13/Animal.cpp demo/chapter13/Animal.h demo/chapter13/Cat.cpp demo/chapter13/Cat.h demo/chapter13/Brass.cpp demo/chapter13/Brass.h demo/chapter13/BrassPlus.cpp demo/chapter13/BrassPlus.h demo/chapter13/Father.cpp demo/chapter13/Father.h demo/chapter13/Child.cpp demo/chapter13/Child.h demo/chapter13/Star.cpp demo/chapter13/Star.h)
